--- a/src/components/ActiveMovie/ActiveMovie.css
+++ b/src/components/ActiveMovie/ActiveMovie.css
@@ -1,39 +1,33 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 .activeMovieContainer {
-  width: -moz-fit-content;
-  width: fit-content;
-  margin: 50vh 0 0 8vw;
+  margin: 214px auto 0;
+  text-align: center;
 }
 
 .liteflix-original {
-  margin: 0 0 24px 5px;
+  margin: 0 0 16px 0;
   font-family: "Bebas Neue", sans-serif;
   font-size: 20px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 20px;
   letter-spacing: 4px;
   color: #ffffff;
 }
 
 .movieTitle {
   font-family: "Bebas Neue", sans-serif;
-  font-size: 120px;
-  font-weight: 400;
-  line-height: 100px;
-  letter-spacing: 16px;
+  font-size: 76px;
+  font-weight: 700;
+  line-height: 77.5px;
+  letter-spacing: 12px;
   margin: 0;
   color: #64EEBC;
 }
 
-.buttons {
-  display: flex;
-  flex-direction: row;
-}
-
-.play-button {
+.main-play-button {
   width: 248px;
   height: 56px;
-  margin: 32px 24px 0 0;
+  margin: 16px auto 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -41,7 +35,7 @@
   font-family: "Bebas Neue", sans-serif;
   font-size: 18px;
   font-weight: 400;
-  line-height: 22px;
+  line-height: 21.6px;
   letter-spacing: 4px;
   color: #ffffff;
   background-color: #242424;
@@ -49,7 +43,13 @@
   cursor: pointer;
 }
 
-.play-icon {
+.main-play-icon {
+  width: 14px;
+  height: 14px;
+  margin-right: 12px;
+}
+
+.main-plus-icon {
   width: 14px;
   height: 14px;
   margin-right: 12px;
@@ -58,7 +58,7 @@
 .add-to-list-button {
   width: 248px;
   height: 56px;
-  margin-top: 32px;
+  margin: 16px auto 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -66,10 +66,37 @@
   font-family: "Bebas Neue", sans-serif;
   font-size: 18px;
   font-weight: 400;
-  line-height: 22px;
+  line-height: 21.6px;
   letter-spacing: 4px;
   color: #ffffff;
   background-color: rgba(36, 36, 36, 0.5019607843);
   border: solid 1px rgba(255, 255, 255, 0.5019607843);
   cursor: pointer;
+}
+
+@media screen and (min-width: 480px) {
+  .activeMovieContainer {
+    margin: 466px 0 0 99px;
+    text-align: left;
+  }
+  .liteflix-original {
+    margin: 0 0 24px 5px;
+    text-align: left;
+  }
+  .movieTitle {
+    font-size: 120px;
+    line-height: 100px;
+    letter-spacing: 16px;
+  }
+  .buttons {
+    display: flex;
+    flex-direction: row;
+    margin: 32px 0 0 5px;
+  }
+  .main-play-button {
+    margin: 0 24px 0 0;
+  }
+  .add-to-list-button {
+    margin: 0;
+  }
 }/*# sourceMappingURL=ActiveMovie.css.map */
