--- a/src/components/AppContainer/AppContainer.scss
+++ b/src/components/AppContainer/AppContainer.scss
@@ -1,6 +1,29 @@
 .AppContainer {
   width: 100%;
-  height: 100vh;
+  height: 561px;
   background-size: cover;
-  background-position: center;
+  background-position: bottom;
+  position: relative;
+  // z-index: -2;
+}
+
+.gradient-overlay {
+  background: linear-gradient(180deg, rgba(36, 36, 36, 0) 0%, #242424 100%);
+  height: 193px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  // z-index: -1;
+}
+
+@media screen and (min-width: 480px) {
+  .AppContainer {
+    height: 100vh;
+    background-position: center;
+  }
+
+  .gradient-overlay {
+    display: none;
+  }
 }
