--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
+  
+}
+
+::selection {
+  background-color: #64EEBC;
+  color: #242424;
 }
 
 code {
