--- a/src/components/AppContainer/AppContainer.scss
+++ b/src/components/AppContainer/AppContainer.scss
@@ -19,7 +19,7 @@
 
 @media screen and (min-width: 480px) {
   .AppContainer {
-    height: 100vh;
+    min-height: 100vh;
     background-position: center;
   }
 
