--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,6 +8,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  box-sizing: content-box;
 }
 
 .menu-icon {
@@ -38,7 +39,7 @@
   .header {
     padding-top: 32px;
     width: 1232px;
-    height: 40px;
+    min-height: 40px;
   }
   .section {
     display: flex;
@@ -84,4 +85,4 @@
     width: 40px;
     height: 40px;
   }
-}/*# sourceMappingURL=Header.css.map */
+}/*# sourceMappingURL=header.css.map */
