--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,7 +8,8 @@
   display:flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items:center
+  align-items:center;
+  box-sizing: content-box;
 }
 
 .menu-icon {
@@ -40,7 +41,7 @@
   .header {
     padding-top: 32px;
     width: 1232px;
-    height: 40px;
+    min-height: 40px;
   }
   
   .section{
