--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,6 +15,7 @@
 .menu-icon {
   width: 27px;
   height: 12px;
+  cursor: pointer;
 }
 
 .logo {
@@ -77,7 +78,9 @@
     letter-spacing: 4px;
     text-align: left;
     color: #ffffff;
-    text-decoration: none;
+    background: transparent;
+    border:none;
+    padding: 0;
   }
   
   .menu-icon {
