--- a/src/components/MovieList/MovieList.scss
+++ b/src/components/MovieList/MovieList.scss
@@ -27,16 +27,12 @@
   }
 
   .dropdown-options{
-    width:241px;
-    height: 102px;
-    background: url('../../../public/img/dropdown.png');
-    background-size: cover;
-    position:absolute;
-    right:0;
+    width:100vw;
+    position:fixed;
     z-index:1;
-    margin-top:8px;
-    padding: 0 24px;
+    padding: 32px 24px;
     box-sizing: border-box;
+    background: #242424;
   }
 
   .dropdown-option{
@@ -52,10 +48,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0;
   }
 
   .option-popular-movies{
-    margin:30px 0 16px;
+    margin-bottom:16px;
   }
 
   .vector{
@@ -63,13 +60,10 @@
     height: 8px;
   }
 
-  .option-my-movies{
-    margin-bottom:24px;
-  }
-
   .movie-thumbnails {
     display: flex;
     flex-direction: column;
+    overflow: hidden;
   }
 
   .first-movie-thumbnail {
@@ -124,8 +118,13 @@
       margin: 0 0 14px;
     }
   }
+}
 
-  
+@media screen and (max-width: 479px) {
+  .dropdown-options {
+      left: 0;
+      bottom: 0;
+  }
 }
 
 
@@ -137,6 +136,27 @@
     right: 104px;
     margin:0;
 
+    .dropdown-options{
+      width:241px;
+      height: 102px;
+      background: url('../../../public/img/dropdown.png');
+      background-size: cover;
+      position:absolute;
+      right:0;
+      z-index:1;
+      margin-top:8px;
+      padding: 0 24px;
+      box-sizing: border-box;
+    }
+
+    .option-popular-movies{
+      margin:30px 0 16px;
+    }
+  
+    .option-my-movies{
+      margin-bottom:24px;
+    }
+  
 
     .last-movie-thumbnail {
       margin: 0 auto
