--- a/src/components/AddMovie/AddMovie.scss
+++ b/src/components/AddMovie/AddMovie.scss
@@ -1,64 +1,63 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
-.modal-dialog {
-  max-width: 730px;
+div.modal-dialog {
+  max-width: 100vw;
+  width: 100vw;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.modal-content {
-  width: 730px;
+div.modal-content {
+  width: 100vw;
+  min-height: 100vh;
   background: #242424;
   color: #ffffff;
   border: none;
   border-radius: 0;
-  padding: 24px;
+  padding: 2vh 3vh 0;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  justify-content: center;
 
-  .modal-header {
+  div.modal-header {
     border: none;
     display: flex;
     flex-direction: column;
     padding: 0;
   }
 
-  .modal-title {
+  div.modal-title {
     font-family: "Bebas Neue", sans-serif;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 400;
-    line-height: 20px;
+    line-height: 22px;
     letter-spacing: 4px;
-    margin-top: 7px;
     color: #64eebc;
+    margin-bottom: 8.9vh;
   }
 
-  .close-button {
-    width: 15px;
-    height: 15px;
-    cursor: pointer;
-    align-self: flex-end;
-  }
-
-  .modal-body {
+  .body-modal {
     padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
   }
 
   .container {
-    margin-top: 48px;
-    width: 602px;
-    height: 100px;
+    width: 87.2vw;
+    height: 10vh;
     border: 1px dashed #ffffff;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     .add-label {
       display: flex;
-      flex-direction: center;
       cursor: pointer;
     }
 
@@ -69,7 +68,7 @@
       line-height: 16px;
       letter-spacing: 4px;
       text-align: center;
-      margin: 41px auto;
+      margin: 0;
     }
 
     .clip {
@@ -78,11 +77,11 @@
   }
 
   .divider {
-    width: 248px;
-    height: 24px;
-    margin-top: 48px;
+    width: 66.1vw;
+    margin-top: 6.9vh;
     border-bottom: 1px solid #ffffff;
     box-sizing: border-box;
+    overflow: hidden;
 
     p {
       font-family: "Bebas Neue", sans-serif;
@@ -95,15 +94,16 @@
     }
   }
 
-  .modal-footer {
+  div.modal-footer {
     border: none;
     display: flex;
     justify-content: center;
     padding: 0;
   }
+
   .upload-button {
-    width: 248px;
-    height: 56px;
+    width: 66.1vw;
+    height: 6.9vh;
     padding: 0;
     border: 0;
     border-radius: none;
@@ -112,23 +112,53 @@
     font-weight: 400;
     line-height: 22px;
     letter-spacing: 4px;
-    margin: 48px 0 24px;
-    color: #242424
+    margin: 11.8vh 0 3vh;
+    color: #242424;
+  }
+
+  .exit-button {
+    width: 66.1vw;
+    height: 6.9vh;
+    padding: 0;
+    border: solid 1px #ffffff80;
+    border-radius: none;
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 4px;
+    color: #ffffff;
+    background-color: transparent;
+    margin: 0;
   }
 }
 
 // UploadingMovie
 
 .loading-container {
-  width: 602px;
+  width: 87.2vw;
   display: flex;
   flex-direction: column;
   font-family: "Bebas Neue", sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
-  line-height: 16px;
+  line-height: 14px;
   letter-spacing: 4px;
-  margin-top: 60px;
+  margin-bottom: 8.3vh;
+
+  .cancel {
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 4px;
+    text-align: end;
+    margin: 18px 0 0;
+    cursor: pointer;
+    display: block;
+      width: fit-content;
+      align-self: end;
+  }
 }
 
 .progress-uploading {
@@ -136,6 +166,10 @@
   border: none;
   height: 10px;
   background-color: #ffffff80;
+
+  &::-webkit-progress-bar {
+    background-color: #ffffff80;
+  }
 
   &::-webkit-progress-value {
     background-color: #64eebc;
@@ -146,22 +180,11 @@
   }
 }
 
-.cancel {
-  font-family: "Bebas Neue", sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 18px;
-  letter-spacing: 4px;
-  text-align: end;
-  margin: 20px 0 59px;
-  cursor: pointer;
-}
-
 .uploading-divider {
-  width: 248px;
-  height: 24px;
+  width: 66.1vw;
   border-bottom: 1px solid #ffffff;
   box-sizing: border-box;
+  overflow: hidden;
 
   p {
     font-family: "Bebas Neue", sans-serif;
@@ -177,6 +200,7 @@
 // ErrorUploading
 
 .progress-error {
+  width: 100%;
   border: none;
   height: 10px;
   background-color: #ffffff80;
@@ -194,48 +218,40 @@
 
 .upload-finished-message {
   font-family: "Bebas Neue", sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 18px;
+  line-height: 16px;
   letter-spacing: 4px;
   text-align: end;
-  margin: 20px 0 59px;
+  margin: 16px 0 0;
   color: #64eebc;
 }
 
 // SuccesModal
 
 .congratulations {
-  font-family: Bebas Neue;
+  font-family: "Bebas Neue", sans-serif;
   font-size: 24px;
   font-weight: 700;
   line-height: 26px;
   letter-spacing: 4px;
   text-align: center;
-  margin: 72px 0 24px;
+  margin: 11.8vh 0 3.9vh;
 }
 
 .success-message {
-  font-family: Bebas Neue;
+  font-family: "Bebas Neue", sans-serif;
   font-size: 20px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 32px;
   letter-spacing: 4px;
   text-align: center;
-}
-
-#success-title {
-  margin-top: 25px;
-  font-family: Bebas Neue;
-  font-size: 34px;
-  font-weight: 700;
-  line-height: 34px;
-  letter-spacing: 4px;
+  margin: 0;
 }
 
 #home-button {
-  width: 248px;
-  height: 56px;
+  width: 66.1vw;
+  height: 6.9vh;
   padding: 0;
   border: 0;
   border-radius: none;
@@ -244,5 +260,95 @@
   font-weight: 400;
   line-height: 22px;
   letter-spacing: 4px;
-  margin: 92px 0 24px;
+  margin-top: 16.4vh;
+}
+
+@media screen and (min-width: 480px) {
+  div.modal-content {
+    width: 50.7vw;
+    min-height: 47.2vh;
+    padding: 2.6vh 1.7vw;
+
+    div.modal-title {
+      font-size: 20px;
+      line-height: 20px;
+      margin: 1vh 0 5.15vh;
+    }
+
+    .close-button {
+      width: 15px;
+      height: 15px;
+      cursor: pointer;
+      align-self: flex-end;
+      margin: 0;
+    }
+
+    .container {
+      width: 82.5%;
+      height: 10.7vh;
+    }
+
+    .divider {
+      width: 34%;
+      margin-top: 5.2vh;
+    }
+
+    .upload-button {
+      width: 34%;
+      height: 6vh;
+      margin: 5.2vh 0 2.6vh;
+    }
+  }
+
+  // UploadingMovie
+
+  .loading-container {
+    width: 82.5%;
+    font-size: 16px;
+    line-height: 16px;
+    margin-bottom: 6.3vh;
+
+    .cancel {
+      font-size: 18px;
+      line-height: 18px;
+    }
+  }
+
+  .uploading-divider {
+    width: 34%;
+  }
+
+  // UploadFinished
+
+  .upload-finished-message {
+font-size: 18px;
+    line-height: 18px;
+  }
+
+  // SuccesModal
+
+  #success-title {
+    margin: 2.7vh 0 0;
+    font-family: "Bebas Neue", sans-serif;
+    font-size: 34px;
+    font-weight: 700;
+    line-height: 34px;
+    letter-spacing: 4px;
+  }
+
+  .congratulations {
+    margin: 7.72vh 0 2.6vh;
+  }
+
+  .success-message {
+    line-height: 24px;
+  }
+
+  #home-button {
+    width: 34%;
+    height: 6vh;
+    padding: 0;
+    border: 0;
+    margin: 9.9vh 0 2.6vh;
+  }
 }
