--- a/src/components/ActiveMovie/ActiveMovie.css
+++ b/src/components/ActiveMovie/ActiveMovie.css
@@ -1,27 +1,32 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
-.activeMovieContainer {
-  margin: 214px auto 0;
+.active-movie-container {
+  margin: 26.4vh 6.4vw 0;
   text-align: center;
 }
 
 .liteflix-original {
   margin: 0 0 16px 0;
-  font-family: "Bebas Neue", sans-serif;
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 20px;
-  font-weight: 400;
+  font-weight: 200;
   line-height: 20px;
   letter-spacing: 4px;
   color: #ffffff;
 }
 
-.movieTitle {
-  font-family: "Bebas Neue", sans-serif;
+.active-movie-title {
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 76px;
   font-weight: 700;
   line-height: 77.5px;
   letter-spacing: 12px;
   margin: 0;
   color: #64EEBC;
+}
+
+.movie-title-reduced {
+  font-size: 40px;
+  line-height: 50px;
+  letter-spacing: 7px;
 }
 
 .main-play-button {
@@ -32,7 +37,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  font-family: "Bebas Neue", sans-serif;
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 21.6px;
@@ -63,7 +68,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  font-family: "Bebas Neue", sans-serif;
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 21.6px;
@@ -76,17 +81,28 @@
 
 @media screen and (min-width: 480px) {
   .activeMovieContainer {
-    margin: 466px 0 0 99px;
+    margin: 26.4vh 10vw 0;
+  }
+}
+@media screen and (min-width: 900px) {
+  .active-movie-container {
+    margin: 50vh 0 5.6vh 6.9vw;
     text-align: left;
   }
   .liteflix-original {
     margin: 0 0 24px 5px;
     text-align: left;
   }
-  .movieTitle {
+  .active-movie-title {
+    width: 63.4vw;
     font-size: 120px;
     line-height: 100px;
     letter-spacing: 16px;
+  }
+  .movie-title-reduced {
+    font-size: 64px;
+    line-height: 70px;
+    letter-spacing: 10px;
   }
   .buttons {
     display: flex;
