--- a/src/components/AddMovie/AddMovie.scss
+++ b/src/components/AddMovie/AddMovie.scss
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
 div.modal-dialog {
   max-width: 100vw;
@@ -29,7 +28,7 @@ div.modal-content {
   }
 
   div.modal-title {
-    font-family: "Bebas Neue", sans-serif;
+    font-family: "bebas-neue-by-fontfabric", sans-serif;
     font-size: 22px;
     font-weight: 400;
     line-height: 22px;
@@ -49,7 +48,7 @@ div.modal-content {
     width: 87.2vw;
     height: 10vh;
     border: 1px dashed #ffffff;
-    padding: 0;
+    padding: 0 10px;
     margin: 0;
     box-sizing: border-box;
     display: flex;
@@ -62,10 +61,10 @@ div.modal-content {
     }
 
     p {
-      font-family: "Bebas Neue", sans-serif;
+      font-family: "bebas-neue-by-fontfabric", sans-serif;
       font-size: 16px;
       font-weight: 400;
-      line-height: 16px;
+      line-height: 28px;
       letter-spacing: 4px;
       text-align: center;
       margin: 0;
@@ -84,7 +83,7 @@ div.modal-content {
     overflow: hidden;
 
     p {
-      font-family: "Bebas Neue", sans-serif;
+      font-family: "bebas-neue-by-fontfabric", sans-serif;
       font-size: 16px;
       font-weight: 400;
       line-height: 16px;
@@ -107,7 +106,7 @@ div.modal-content {
     padding: 0;
     border: 0;
     border-radius: none;
-    font-family: "Bebas Neue", sans-serif;
+    font-family: "bebas-neue-by-fontfabric", sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 22px;
@@ -122,7 +121,7 @@ div.modal-content {
     padding: 0;
     border: solid 1px #ffffff80;
     border-radius: none;
-    font-family: "Bebas Neue", sans-serif;
+    font-family: "bebas-neue-by-fontfabric", sans-serif;
     font-size: 18px;
     font-weight: 400;
     line-height: 22px;
@@ -139,7 +138,7 @@ div.modal-content {
   width: 87.2vw;
   display: flex;
   flex-direction: column;
-  font-family: "Bebas Neue", sans-serif;
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 14px;
@@ -147,7 +146,7 @@ div.modal-content {
   margin-bottom: 8.3vh;
 
   .cancel {
-    font-family: "Bebas Neue", sans-serif;
+    font-family: "bebas-neue-by-fontfabric", sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 16px;
@@ -187,7 +186,7 @@ div.modal-content {
   overflow: hidden;
 
   p {
-    font-family: "Bebas Neue", sans-serif;
+    font-family: "bebas-neue-by-fontfabric", sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 16px;
@@ -217,7 +216,7 @@ div.modal-content {
 // UploadFinished
 
 .upload-finished-message {
-  font-family: "Bebas Neue", sans-serif;
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
@@ -230,7 +229,7 @@ div.modal-content {
 // SuccesModal
 
 .congratulations {
-  font-family: "Bebas Neue", sans-serif;
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 24px;
   font-weight: 700;
   line-height: 26px;
@@ -240,7 +239,7 @@ div.modal-content {
 }
 
 .success-message {
-  font-family: "Bebas Neue", sans-serif;
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 20px;
   font-weight: 400;
   line-height: 32px;
@@ -255,7 +254,7 @@ div.modal-content {
   padding: 0;
   border: 0;
   border-radius: none;
-  font-family: "Bebas Neue", sans-serif;
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 22px;
@@ -263,7 +262,7 @@ div.modal-content {
   margin-top: 16.4vh;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 900px) {
   div.modal-content {
     width: 50.7vw;
     min-height: 47.2vh;
@@ -329,7 +328,7 @@ font-size: 18px;
 
   #success-title {
     margin: 2.7vh 0 0;
-    font-family: "Bebas Neue", sans-serif;
+    font-family: "bebas-neue-by-fontfabric", sans-serif;
     font-size: 34px;
     font-weight: 700;
     line-height: 34px;
