--- a/src/components/AppContainer/AppContainer.css
+++ b/src/components/AppContainer/AppContainer.css
@@ -1,23 +1,65 @@
-.AppContainer {
-  width: 100%;
-  height: 561px;
-  background-size: cover;
-  background-position: bottom;
+.app-container {
   position: relative;
+  background: #242424;
+  min-height: 100vh;
+}
+
+.content-container {
+  position: relative;
+  z-index: 1;
+}
+
+.background-image {
+  width: 100%;
+  height: 69vh;
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: center;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .gradient-overlay {
   background: linear-gradient(180deg, rgba(36, 36, 36, 0) 0%, #242424 100%);
-  height: 193px;
+  height: 23.8vh;
   width: 100%;
   position: absolute;
   bottom: 0;
   left: 0;
 }
 
+.loading-message {
+  font-family: "bebas-neue-by-fontfabric", sans-serif;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: 4px;
+  text-align: center;
+  color: #64EEBC;
+  margin-top: 48vh;
+}
+.loading-message span {
+  font-weight: 300;
+}
+
 @media screen and (min-width: 480px) {
-  .AppContainer {
-    min-height: 100vh;
+  .background-image {
+    height: 63vh;
+  }
+}
+@media screen and (min-width: 700px) {
+  .background-image {
+    height: 55vh;
+  }
+}
+@media screen and (min-width: 900px) {
+  .body {
+    display: flex;
+    justify-content: space-between;
+  }
+  .background-image {
+    height: 100%;
     background-position: center;
   }
   .gradient-overlay {
