--- a/src/components/ActiveMovie/ActiveMovie.scss
+++ b/src/components/ActiveMovie/ActiveMovie.scss
@@ -1,5 +1,6 @@
 .active-movie-container {
-  margin: 26.4vh 6.4vw 0;
+  width: fit-content;
+  margin: 26.4vh auto 0;
   text-align: center;
 }
 
@@ -15,10 +16,10 @@
 
 .active-movie-title {
   font-family: "bebas-neue-by-fontfabric", sans-serif;
-  font-size: 76px;
+  font-size: 60px;
   font-weight: 700;
-  line-height: 77.5px;
-  letter-spacing: 12px;
+  line-height: 60px;
+  letter-spacing: 10px;
   margin: 0;
   color: #64EEBC;
 }
@@ -78,10 +79,18 @@
   border: solid 1px #ffffff80;
   cursor: pointer;
 }
+
+@media screen and (min-width: 375px) {
+  .active-movie-title {
+    font-size: 76px;
+    line-height: 77.5px;
+    letter-spacing: 12px;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .activeMovieContainer {
     margin: 26.4vh 10vw 0;
-
   }
 }
 
@@ -98,9 +107,9 @@
   
   .active-movie-title {
     width: 63.4vw;
-    font-size: 120px;
-    line-height: 100px;
-    letter-spacing: 16px;
+    font-size: 90px;
+    line-height: 75px;
+    letter-spacing: 13px;
   }
 
   .movie-title-reduced{
@@ -125,3 +134,11 @@
   
 }
 
+@media screen and (min-width: 1366px) {
+  
+  .active-movie-title {
+    font-size: 120px;
+    line-height: 100px;
+    letter-spacing: 16px;
+  }
+}
