--- a/src/components/AddMovie/AddMovie.scss
+++ b/src/components/AddMovie/AddMovie.scss
@@ -1,4 +1,3 @@
-
 div.modal-dialog {
   max-width: 100vw;
   width: 100vw;
@@ -15,7 +14,7 @@ div.modal-content {
   color: #ffffff;
   border: none;
   border-radius: 0;
-  padding: 2vh 3vh 0;
+  padding: 2vh 6.4vw 0;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -76,7 +75,7 @@ div.modal-content {
   }
 
   .divider {
-    width: 66.1vw;
+    width: 248px;
     margin-top: 6.9vh;
     border-bottom: 1px solid #ffffff;
     box-sizing: border-box;
@@ -96,13 +95,14 @@ div.modal-content {
   div.modal-footer {
     border: none;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     padding: 0;
   }
 
   .upload-button {
-    width: 66.1vw;
-    height: 6.9vh;
+    width: 248px;
+    height: 56px;
     padding: 0;
     border: 0;
     border-radius: none;
@@ -116,8 +116,8 @@ div.modal-content {
   }
 
   .exit-button {
-    width: 66.1vw;
-    height: 6.9vh;
+    width: 248px;
+    height: 56px;
     padding: 0;
     border: solid 1px #ffffff80;
     border-radius: none;
@@ -155,8 +155,8 @@ div.modal-content {
     margin: 18px 0 0;
     cursor: pointer;
     display: block;
-      width: fit-content;
-      align-self: end;
+    width: fit-content;
+    align-self: end;
   }
 }
 
@@ -180,7 +180,7 @@ div.modal-content {
 }
 
 .uploading-divider {
-  width: 66.1vw;
+  width: 248px;
   border-bottom: 1px solid #ffffff;
   box-sizing: border-box;
   overflow: hidden;
@@ -249,8 +249,8 @@ div.modal-content {
 }
 
 #home-button {
-  width: 66.1vw;
-  height: 6.9vh;
+  width: 248px;
+  height: 56px;
   padding: 0;
   border: 0;
   border-radius: none;
@@ -262,16 +262,27 @@ div.modal-content {
   margin-top: 16.4vh;
 }
 
+@media screen and (min-width: 480px) {
+  div.modal-content {
+    .container {
+      width: 60vw;
+    }
+  }
+  .loading-container {
+    width: 60vw;
+  }
+}
+
 @media screen and (min-width: 900px) {
   div.modal-content {
-    width: 50.7vw;
-    min-height: 47.2vh;
-    padding: 2.6vh 1.7vw;
+    width: 730px;
+    min-height: auto;
+    padding: 24px;
 
     div.modal-title {
       font-size: 20px;
       line-height: 20px;
-      margin: 1vh 0 5.15vh;
+      margin: 9px 0 48px;
     }
 
     .close-button {
@@ -283,29 +294,26 @@ div.modal-content {
     }
 
     .container {
-      width: 82.5%;
-      height: 10.7vh;
+      width: 602px;
+      height: 100px;
     }
 
     .divider {
-      width: 34%;
-      margin-top: 5.2vh;
+      margin-top: 48px;
     }
 
     .upload-button {
-      width: 34%;
-      height: 6vh;
-      margin: 5.2vh 0 2.6vh;
+      margin: 48px 0 24px;
     }
   }
 
   // UploadingMovie
 
   .loading-container {
-    width: 82.5%;
+    width: 602px;
     font-size: 16px;
     line-height: 16px;
-    margin-bottom: 6.3vh;
+    margin-bottom: 59px;
 
     .cancel {
       font-size: 18px;
@@ -313,21 +321,17 @@ div.modal-content {
     }
   }
 
-  .uploading-divider {
-    width: 34%;
-  }
-
   // UploadFinished
 
   .upload-finished-message {
-font-size: 18px;
+    font-size: 18px;
     line-height: 18px;
   }
 
   // SuccesModal
 
   #success-title {
-    margin: 2.7vh 0 0;
+    margin: 25px 0 0;
     font-family: "bebas-neue-by-fontfabric", sans-serif;
     font-size: 34px;
     font-weight: 700;
@@ -336,7 +340,7 @@ font-size: 18px;
   }
 
   .congratulations {
-    margin: 7.72vh 0 2.6vh;
+    margin: 72px 0 24px;
   }
 
   .success-message {
@@ -344,10 +348,8 @@ font-size: 18px;
   }
 
   #home-button {
-    width: 34%;
-    height: 6vh;
     padding: 0;
     border: 0;
-    margin: 9.9vh 0 2.6vh;
+    margin: 92px 0 24px;
   }
 }
